<package>
<name>ros1bag_to_pcd</name>
<version>1.0.0</version>
<description>The converter from ros1 bag file to pcd file</description>
<maintainer email="koki.aoki@map4.jp">koki aoki</maintainer>
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>pcl_conversions</build_depend>

<run_depend>roscpp</run_depend>
<run_depend>pcl_ros</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>pcl_conversions</run_depend>
</package>